Add in 2 folders for ViewModel and Model

--- a/WorldHourBand/WorldHourBand/WorldHourBand.csproj
+++ b/WorldHourBand/WorldHourBand/WorldHourBand.csproj
@@ -129,6 +129,10 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
