--- a/WorldHourBand/WorldHourBand/WorldHourBand.csproj
+++ b/WorldHourBand/WorldHourBand/WorldHourBand.csproj
@@ -111,6 +111,8 @@
     <None Include="WorldHourBand_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\SampleTileIconLarge.png" />
+    <Content Include="Assets\SampleTileIconSmall.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
